--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <head>
   <meta charset="utf-8">
   <title>Kdo chce být milionářem?</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  <h1>Kdo chce být milionářem?</h1>
+  <h1>Chcete být milionářem?</h1>
   <table>
     <tr>
       <td>
@@ -110,6 +111,8 @@
       </td>
     </tr>
   </table>
+
+  <script src="code.js"></script>
  
 </body>
 
