--- a/index.html
+++ b/index.html
@@ -11,98 +11,98 @@
   <table>
     <tr>
       <td>
-        <img src="gif.gif">
+        <img src="img/vasut.jpeg">
       </td>
     </tr>
     <tr>
       <td>
-        <h3>Jaké je hlavní město Francie?</h3>
-        <button onclick="vyhodnotit1(this)">Praha</button>
-        <button onclick="vyhodnotit1(this)" class="spravnaodpoved">Paříž</button>
-        <button onclick="vyhodnotit1(this)">Peking</button>
+        <h3>Šohaj je označení pro</h3>
+        <button onclick="vyhodnotit1(this)">podvodníka</button>
+        <button onclick="vyhodnotit1(this)" class="spravnaodpoved">chlapce</button>
+        <button onclick="vyhodnotit1(this)">zvíře</button>
       </td>
     </tr>
     <tr>
       <td>
-        <h3>Jak vypadá vlajka České republiky?</h3>
+        <h3>Vyber současného prezidenta USA</h3>
         <button onclick="vyhodnotit2(this)">
-          <img width="100" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/21/Flag_of_Vietnam.svg/2560px-Flag_of_Vietnam.svg.png"">
+          <img width="100" src="img/trump.jpeg"">
         </button>
         <button onclick="vyhodnotit2(this)" class="spravnaodpoved">
-          <img width="100" src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cb/Flag_of_the_Czech_Republic.svg/255px-Flag_of_the_Czech_Republic.svg.png">
+          <img width="100" height="57" src="img/biden.jpeg">
         </button>
         <button onclick="vyhodnotit2(this)">
-          <img width="100" src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/03/Flag_of_Italy.svg/1500px-Flag_of_Italy.svg.png">
+          <img width="100" height="57" src="img/truman.jpeg">
         </button>
       </td>
     </tr>
     <tr>
       <td>
-        <h3>Jakou měnou se platí na Ukrajině?</h3>
-        <button onclick="vyhodnotit3(this)" class="spravnaodpoved">hřivna</button>
-        <button onclick="vyhodnotit3(this)">euro</button>
-        <button onclick="vyhodnotit3(this)">rubl</button>
+        <h3>Kdy Česká republika vstoupila do EU?</h3>
+        <button onclick="vyhodnotit3(this)" class="spravnaodpoved">2004</button>
+        <button onclick="vyhodnotit3(this)">2007</button>
+        <button onclick="vyhodnotit3(this)">1997</button>
       </td>
     </tr>
     <tr>
       <td>
-        <h3>Kolik má člověk krčních obratlů?</h3>
-        <button onclick="vyhodnotit4(this)">6</button>
-        <button onclick="vyhodnotit4(this)">10</button>
-        <button onclick="vyhodnotit4(this)" class="spravnaodpoved">7</button>
+        <h3>Kdo byl první na Měsíci?</h3>
+        <button onclick="vyhodnotit4(this)">Lance Armstrong</button>
+        <button onclick="vyhodnotit4(this)">Louis Armstrong</button>
+        <button onclick="vyhodnotit4(this)" class="spravnaodpoved">Neil Armstrong</button>
       </td>
     </tr>
     <tr>
       <td>
-        <h3>Jak se jmenuje aktuální premiér České republiky?</h3>
-        <button onclick="vyhodnotit5(this)">Miloš Zeman</button>
-        <button onclick="vyhodnotit5(this)" class="spravnaodpoved">Petr Fiala</button>
-        <button onclick="vyhodnotit5(this)">Andrej Babiš</button>
+        <h3>Do jaké skupiny řadíme jazyk Javascript?</h3>
+        <button onclick="vyhodnotit5(this)">programovací jazyk</button>
+        <button onclick="vyhodnotit5(this)" class="spravnaodpoved">skriptovací jazyk</button>
+        <button onclick="vyhodnotit5(this)">značkovací jazyk</button>
       </td>
     </tr>
     <tr>
       <td>
-        <h3>Jaké je hlavní město Itálie?</h3>
-        <button onclick="vyhodnotit6(this)">Praha</button>
-        <button onclick="vyhodnotit6(this)" class="spravnaodpoved">Řím</button>
-        <button onclick="vyhodnotit6(this)">Peking</button>
+        <h3>Jaká je nejvyšší hora Evropy?</h3>
+        <button onclick="vyhodnotit6(this)">Sněžka</button>
+        <button onclick="vyhodnotit6(this)" class="spravnaodpoved">Mont Blanc</button>
+        <button onclick="vyhodnotit6(this)">Mount Everest</button>
       </td>
     </tr>
     <tr>
       <td>
-        <h3>Kdo vymyslel teorii relativity?</h3>
-        <button onclick="vyhodnotit7(this)">Jan Neruda</button>
-        <button onclick="vyhodnotit7(this)">Francois Rabelais</button>
-        <button onclick="vyhodnotit7(this)" class="spravnaodpoved">Albert Einstein</button>
+        <h3>Ve kterém z těchto měst je univerzita?</h3>
+        <button onclick="vyhodnotit7(this)">Řevnice</button>
+        <button onclick="vyhodnotit7(this)">Roztoky u Prahy</button>
+        <button onclick="vyhodnotit7(this)" class="spravnaodpoved">Oxford</button>
       </td>
     </tr>
     <tr>
       <td>
-        <h3>Jaká řeka protéká Drážďany?</h3>
-        <button onclick="vyhodnotit8(this)" class="spravnaodpoved">Labe</button>
-        <button onclick="vyhodnotit8(this)">Isar</button>
-        <button onclick="vyhodnotit8(this)">Rýn</button>
+        <h3>Který z těchto románů nenapsal Albert Camus?</h3>
+        <button onclick="vyhodnotit8(this)" class="spravnaodpoved">Lolita</button>
+        <button onclick="vyhodnotit8(this)">Morový sloup</button>
+        <button onclick="vyhodnotit8(this)">Cizinec</button>
       </td>
     </tr>
     <tr>
       <td>
-        <h3>Na kolik krajů se dělí Česká republika?</h3>
-        <button onclick="vyhodnotit9(this)">20</button>
-        <button onclick="vyhodnotit9(this)" class="spravnaodpoved">15</button>
-        <button onclick="vyhodnotit9(this)">12</button>
+        <h3>Kolik je 10x5?</h3>
+        <button onclick="vyhodnotit9(this)">80</button>
+        <button onclick="vyhodnotit9(this)" class="spravnaodpoved">50</button>
+        <button onclick="vyhodnotit9(this)">45</button>
       </td>
     </tr>
     <tr>
       <td>
-        <h3>Kolik let je britské královně?</h3>
-        <button onclick="vyhodnotit10(this)" class="spravnaodpoved">96</button>
-        <button onclick="vyhodnotit10(this)">69</button>
-        <button onclick="vyhodnotit10(this)">82</button>
+        <h3>Ve kterém z těchto případů není pravopisná chyba?</h3>
+        <button onclick="vyhodnotit10(this)" class="spravnaodpoved">byliny</button>
+        <button onclick="vyhodnotit10(this)">bilyny</button>
+        <button onclick="vyhodnotit10(this)">bylini</button>
       </td>
     </tr>
     <tr>
       <td id="bun                                kaskore">
-        <p>tvoje skóre: <span id="skore">0</span>kč</p>
+        <p>tvoje skóre: <span id="skore">0</span>&nbsp;Kč</p>
       </td>
     </tr>
     <tr>
