--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Kdo chce být milionářem?</title>
+  <title>Chcete být milionářem?</title>
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
